# docker-cpp-example

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yaml
clang/: Dockerfile  install_clang.sh
env/: ENVIRONMENT
scripts/: build.py
src/: main.cpp
